# cosmwasm-starter-contract

./: .gitignore  Cargo.toml  instantiate_msg.json  package-lock.json  package.json  script.js
.history/: Dockerfile_20240620101413  docker-compose_20240620101532.yml  docker-compose_20240620101600.yml
.history/examples/: schema_20240617192906.rs  schema_20240619111041.rs
.history/src/: contract_20240617205214.rs  contract_20240618113241.rs  contract_20240618113310.rs  contract_20240618113402.rs  contract_20240618113929.rs  contract_20240618114853.rs  contract_20240618115010.rs  contract_20240618173414.rs  contract_20240618173436.rs  contract_20240618173440.rs  contract_20240618180133.rs  contract_20240618181208.rs  contract_20240618182244.rs  contract_20240618183043.rs  contract_20240618183126.rs  contract_20240618183435.rs  contract_20240618190115.rs  contract_20240618212109.rs  contract_20240619070722.rs  contract_20240619070725.rs  contract_20240619070756.rs  contract_20240619070819.rs  contract_20240619070948.rs  contract_20240619071003.rs  contract_20240619071020.rs  contract_20240619071216.rs  contract_20240619071550.rs  contract_20240619071603.rs  contract_20240619071623.rs  contract_20240619072002.rs  contract_20240619072108.rs  contract_20240619072321.rs  contract_20240619072551.rs  contract_20240619072708.rs  contract_20240619072744.rs  contract_20240619072835.rs  contract_20240619073002.rs  contract_20240619082701.rs  contract_20240619082829.rs  (+111 more)
artifacts/: checksums.txt  cw-starter.wasm
examples/: schema.rs
src/: error.rs  helpers.rs  msg.rs  state.rs
(+1 files in other folders)
