[package]
name = "cw-starter"
version = "0.1.0"
authors = ["ahng03 <zukitata03@18l427.onmicrosoft.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true


[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0"}
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
cw20 = "1.1.1"
cw-utils = "1.0.3"
schemars = "0.8.16"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }

[dev-dependencies]
cw-multi-test = "0.17.0"